src/test/ui/no-send-res-ports.stderr
error[E0277]: `Rc<()>` cannot be sent between threads safely
  --> $DIR/no-send-res-ports.rs:25:5
   |
LL |       thread::spawn(move|| {
   |  _____^^^^^^^^^^^^^_-
   | |     |
   | |     `Rc<()>` cannot be sent between threads safely
LL | |
LL | |         let y = x;
LL | |         println!("{:?}", y);
LL | |     });
   | |_____- within this `[closure@$DIR/no-send-res-ports.rs:25:19: 29:6 x:Foo]`
   | 
  ::: $SRC_DIR/std/src/thread/mod.rs:LL:COL
   |
LL |       F: Send + 'static,
   |          ---- required by this bound in `spawn`
   |
   = help: within `[closure@$DIR/no-send-res-ports.rs:25:19: 29:6 x:Foo]`, the trait `Send` is not implemented for `Rc<()>`
   = note: required because it appears within the type `Port<()>`
   = note: required because it appears within the type `Foo`
   = note: required because it appears within the type `[closure@$DIR/no-send-res-ports.rs:25:19: 29:6 x:Foo]`

error: aborting due to previous error

For more information about this error, try `rustc --explain E0277`.
